Update accent color for CodeDeploy test (v1.0 retag)

--- a/index.html
+++ b/index.html
@@ -7,9 +7,7 @@
   <title>CodeDeploy Demo — Interactive</title>
   <style>
     :root {
-      --bg: #0b3d0b;
-      --accent: #ffd54d;
-      --muted: #e0f2e9
+       --accent: #2196f3;
     }
 
     body {
